--- a/referent_introduction_annotation_guidelines.tex
+++ b/referent_introduction_annotation_guidelines.tex
@@ -79,7 +79,7 @@
 
 \title{Referent Introduction Annotation Guidelines}
 \author{}
-\date{\vspace{-2.5em}2020-06-02}
+\date{\vspace{-2.5em}2020-06-05}
 
 \begin{document}
 \maketitle
@@ -104,8 +104,8 @@
 \hypertarget{answer-1-referents}{%
 \chapter{Answer 1: Referents}\label{answer-1-referents}}
 
-\hypertarget{asdf}{%
-\section{asdf}\label{asdf}}
+\hypertarget{referents}{%
+\section{Referents}\label{referents}}
 
 \begin{quote}
 Annotated on tier \texttt{norm{[}referent{]}} in ExMARALDA
@@ -159,64 +159,64 @@ We have a list of 20 possible referents, and we count how many of these 20 refer
 \end{enumerate}
 
 \hypertarget{man}{%
-\section{man}\label{man}}
+\subsection{man}\label{man}}
 
 \hypertarget{woman1}{%
-\section{woman1}\label{woman1}}
+\subsection{woman1}\label{woman1}}
 
 \hypertarget{couple}{%
-\section{couple}\label{couple}}
+\subsection{couple}\label{couple}}
 
 \hypertarget{people}{%
-\section{people}\label{people}}
+\subsection{people}\label{people}}
 
 \hypertarget{family}{%
-\section{family}\label{family}}
+\subsection{family}\label{family}}
 
 \hypertarget{ball}{%
-\section{ball}\label{ball}}
+\subsection{ball}\label{ball}}
 
 \hypertarget{stroller}{%
-\section{stroller}\label{stroller}}
+\subsection{stroller}\label{stroller}}
 
 \hypertarget{baby}{%
-\section{baby}\label{baby}}
+\subsection{baby}\label{baby}}
 
 \hypertarget{woman2}{%
-\section{woman2}\label{woman2}}
+\subsection{woman2}\label{woman2}}
 
 \hypertarget{dog}{%
-\section{dog}\label{dog}}
+\subsection{dog}\label{dog}}
 
 \hypertarget{leash}{%
-\section{leash}\label{leash}}
+\subsection{leash}\label{leash}}
 
 \hypertarget{groceries}{%
-\section{groceries}\label{groceries}}
+\subsection{groceries}\label{groceries}}
 
 \hypertarget{trunk}{%
-\section{trunk}\label{trunk}}
+\subsection{trunk}\label{trunk}}
 
 \hypertarget{car1}{%
-\section{car1}\label{car1}}
+\subsection{car1}\label{car1}}
 
 \hypertarget{car2}{%
-\section{car2}\label{car2}}
+\subsection{car2}\label{car2}}
 
 \hypertarget{car3}{%
-\section{car3}\label{car3}}
+\subsection{car3}\label{car3}}
 
 \hypertarget{cars}{%
-\section{cars}\label{cars}}
+\subsection{cars}\label{cars}}
 
 \hypertarget{driver1}{%
-\section{driver1}\label{driver1}}
+\subsection{driver1}\label{driver1}}
 
 \hypertarget{driver2}{%
-\section{driver2}\label{driver2}}
+\subsection{driver2}\label{driver2}}
 
 \hypertarget{drivers}{%
-\section{drivers}\label{drivers}}
+\subsection{drivers}\label{drivers}}
 
 \hypertarget{answer-2-r-type}{%
 \chapter{Answer 2: R-Type}\label{answer-2-r-type}}
